FEATURE: add more order options
Allows ordering by likes on first post, number of posters, category id and if the topic voting plugin is used by number of votes.
I created an icon for likes on OP so you can distinguish between like and likes on first post even when lables are hidden on mobile

--- a/settings.yml
+++ b/settings.yml
@@ -26,6 +26,10 @@ custom_topic_sort_order_items:
           - posts
           - likes
           - views
+          - op_likes
+          - posters
+          - category
+          - votes
 
 custom_topic_sort_order_button_icon: 
   default: "sort"
